# lattice-sdk-python

./: .fernignore  .releaserc.yml  LICENSE  README.md  pyproject.toml  reference.md
.fern/: metadata.json
.github/: CODEOWNERS
.github/workflows/: release.yml
src/anduril/: __init__.py  _default_clients.py  client.py  environment.py
src/anduril/core/: client_wrapper.py  oauth_token_provider.py
src/anduril/entities/: __init__.py  client.py  raw_client.py
src/anduril/errors/: __init__.py  bad_request_error.py  content_too_large_error.py  insufficient_storage_error.py  internal_server_error.py  not_found_error.py  request_timeout_error.py  too_many_requests_error.py  unauthorized_error.py
src/anduril/o_auth2/: client.py  raw_client.py
src/anduril/o_auth_2/: client.py  raw_client.py
src/anduril/oauth/: client.py  raw_client.py
src/anduril/object/: __init__.py
src/anduril/objects/: __init__.py  client.py  raw_client.py
src/anduril/tasks/: __init__.py  client.py  raw_client.py
src/anduril/type/: __init__.py
src/anduril/types/: __init__.py  acm_details.py  acm_details_acm_type.py  active_target.py  agent.py  agent_request.py  agent_stream_event.py  agent_stream_event_event.py  agent_stream_heartbeat.py  agent_stream_heartbeat_data.py  agent_stream_heartbeat_event.py  agent_stream_request.py  agent_task_request.py  alert.py  alert_condition.py  alert_level.py  aliases.py  allocation.py  bandwidth.py  (+212 more)
src/anduril_lattice_sdk/: client.py
tests/: test_aiohttp_autodetect.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+40 files in other folders)
