[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[template.plugins.default]
src-layout = true

[project]
name = "anduril"
version = "1.0"
dependencies = [
  "betterproto>=2.0.0b6",
  "grpcio",
  "grpclib",
  "protobuf"
]
requires-python = ">=3.8"
authors = [
  {name = "Anduril Industries Inc."},
]
maintainers = [
  {name = "Anduril Industries Inc."}
]
description = "Anduril SDK in Python"
readme = "README.md"
